--- a/style.css
+++ b/style.css
@@ -5,18 +5,6 @@
   /* font-family: 'Lexend Deca', sans-serif; */
   /* font-family: 'Big Shoulders Display', cursive; */
 }
-@media (max-width: 375px) {
-  /* body {
-    font-size: smaller;
-  } */
-  .mobile {
-    width: 90%;
-    flex-direction: column;
-  }
-  .small{
-    width: 90%;
-  }
-}
 
 body {
   background-color: hsl(0, 0%, 95%);
@@ -96,6 +84,46 @@ button:active {
 }
 .lux {
   color: hsl(179, 100%, 13%);
+}
+@media screen and (max-width: 375px) {
+  h4 {
+    margin-bottom: 10px;
+    text-align: left;
+  }
+  h4 a {
+    font-size: 23px;
+  }
+  main {
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+  }
+  div {
+    padding: 10px;
+  }
+  p {
+    padding: 20px 10px 30px 10px;
+    line-height: 1.5;
+    letter-spacing: 1px;
+  }
+  img {
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+
+  h3 {
+    padding: 10px 0;
+    text-align: center;
+  }
+  .small {
+    width: 100%;
+    border-radius: 0;
+  }
+
+  button {
+    padding: 10px 15px;
+    align-self: center;
+  }
 }
 
 /* Mobile: 375px max-width
